--- a/rapport/DeepLearning.tex
+++ b/rapport/DeepLearning.tex
@@ -8,7 +8,7 @@
 \usepackage[frenchb]{babel}
 \usepackage[T1]{fontenc}
 \usepackage[nonumberlist]{glossaries}
-
+\usepackage[inline]{asymptote}
 
 \makeglossaries
 % entrées du lexique
@@ -190,13 +190,83 @@ Les difficultés à calculer cette dérivée à n'importe quel niveau du réseau
 , puis relayée aux niveaux inférieurs, simplifiant ainsi leur descente de gradient respective. 
 
 \section{Réseaux convolutifs}
-\subsection{AHAHAHA}
+
+\subsection{Approche architecturale}
+
+L’approche adoptée par les CNNs consiste en premier lieu à adapter la structure du réseau aux entrées reçues, à savoir des images. 
+Les neurones sont organisés en 3 dimensions : hauteur, largeur et profondeur\footnote{Il faut bien faire la distinction entre la profondeur d’une couche, dont il est ici question, et celle du réseau en lui-même, qui signifie son nombre de couches}.
+Aussi, dans un tel réseau, les neurones seront seulement connectés à un nombre limité de neurones de la couche précédente. 
+En définitive pour  $n$ classes, la sortie sera caractérisée par un vecteur résultant de dimensions $ 1 \times 1 \times n$.
+Une architecture de CNN répandue est composée des couches suivantes. A titre d’exemple, nous avons choisi d’illustrer les dimensions des couches pour un système utilisant les entrées de la base CIFAR 10 RGB :
+
+\begin{itemize}
+  \item \textbf{INPUT} : un volume 3D de [$32 \times 32 \times 3$]
+  \item \textbf{CONV} : chaque neurone calcule le produit de convolution entre ses poids et une région locale connectée de la couche d’entrée. Le résultat se traduit comme un volume où la profondeur correspond au nombre de filtres utilisés (soit un volume en sortie de dimensions [$32 \times 32 \times 12$] si on utilise 12 filtres).
+  \item \textbf{ReLU} (Rectified Linear Unit) : cette couche utilise pour chacun de ses neurones un rectificateur linéaire comme f(x) = max(x, 0). Une telle fonction élémentaire est appliquée sur chacune des composantes du volume précédent. La dimension de la sortie est invariante, soit dans notre exemple [$32 \times 32 \times 12$]. 
+  \item \textbf{POOL}: sous-échantillonnage sur la hauteur et la largeur de la couche précédente. Le volume résultant sera par exemple dimensionné de la manière suivante : [$16 \times 16 \times 12$].
+  \item \textbf{FC (FullyConnected)} : comme son nom l’indique, les unités de cette couche sont connectées à tous les neurones de la couche précédente. Le vecteur résultant est calculé en fonction de poids, de manière similaire aux réseaux multicouches non convolutifs. La dimension en sortie sera [$1 \times 1 \times 10$].
+\end{itemize}
+Notons que l’entraînement d’un tel réseau, par descente de gradient, concerne les couches CONV et FC qui effectuent leurs calculs en fonction de poids et biais paramétrables. Les couches POOL et ReLU traitent leurs entrées de manière fixe, indépendamment de l’avancée de l’entraînement.
+
+\subsection{Convolution et pooling}
+Les paramètres des couches de convolution sont composés de filtres de même profondeur que la couche d’entée. 
+Les largeurs et hauteurs sont quant à elles moindres, afin d’être appliquées à des zones réduites de l’image, constituant une fenêtre de traitement. 
+Pour un filtre donné, les sous prélèvements locaux sont donc convolués avec les valeurs du filtre par glissement de la fenêtre dans une direction, jusqu’à ce que la surface entière ait été prise en compte.
+Le résultat de ces opérations se traduit en une « carte d’activation » à deux dimensions, traduisant la réponse d’une partie de l’image, puis de l’image entière, à la caractéristique contenue par le filtre. 
+L’empilement des « cartes d’activation » des différents filtres vont constituer la profondeur de l’entrée de la couche suivante (ReLU). 
+
+La disposition spatiale et le nombre de neurones présents dans le volume en sortie de la couche de convolution dépendent des 3 paramètres (aussi appelés hyper-paramètres) suivants : 
+\par
+\begin{itemize}  
+  \item \textbf{La profondeur} du volume en sortie, donnée par le nombre de filtres utilisés. Est appelée « colonne de profondeur » (\textit{depth column}), un ensemble de neurones connectés à la même région de l’entrée. 
+  \item \textbf{$S$ : le pas} avec lequel on décale le filtre le long de l’entrée va également déterminer la dimension de la sortie. En effet, un grand pas entraînera une sortie réduite dans l’espace, tandis qu’un pas d’un pixel donnera une sortie de taille maximum.   
+  \item \textbf{$P$ : le padding à zéro}, qui consiste à compléter de part et d’autre le volume d’entrée avec des « $0$ ». L’intérêt de cette technique est de contrôler la taille du volume de sortie et, en particulier, de s’assurer qu’il soit égal à celui de l’entrée en hauteur et en largeur.
+\end{itemize}
+
+
+
+Etant données les variables suivantes : 
+\begin{center}
+
+$\left\{
+\begin{array}{ll}
+ W$ : taille de l’entrée (volume)$\\
+ F$ : taille de la fenêtre de traitement de la couche de convolution$\\
+ S$ : pas de glissement de la fenêtre de traitement$\\
+ P$ : padding à zéro$
+\end{array}
+\right.
+$
+\end{center}
+
+le nombre de neurones nécessaires au volume de sortie est donné par : 
+\begin{center}
+ $ \dfrac{W-F+2P}{S}+1$
+\end{center}
+
+Notons que dans un réseau convolutif, le partage des paramètres permet de limiter leur quantité et la complexité des calculs qui en découlent. 
+Cette technique s’appuie sur l’invariance d’une caractéristique, si on la translate dans l’espace. 
+En effet, on s’aperçoit que des mêmes propriétés visuelles peuvent se trouver à différents endroits, dans une ou différentes images. 
+Dans ce cas de figure, il devient pertinent d’utiliser les mêmes filtres (au sens de caractéristiques recherchées) sur l’ensemble de l’image d’entrée. 
+De plus, un neurone s’occupant d’une partie de l’image, on partagera un filtre –pour une profondeur donnée– entre tous les neurones, de manière à respecter ce principe. 
+Ainsi, on mutualise les paramètres et l’apprentissage qui en découle pour chacun des plans ($x_{i}$,$y_{i}$), avec $i  \in [0, nombre de filtres]$. 
+Cette méthode montre ses limites lorsque la position d’une caractéristique recherchée est fixe pour tout un jeu de données d’entrée (apprentissage et généralisation). 
+Par exemple, en considérant des chiffres toujours centrés sur l’image d’entrée, l’apprentissage effectué par les neurones responsables de cette partie de l’image ne sera d’aucune utilité pour les neurones traitant les coins.  
+\par
+L’intérêt du pooling est de réduire progressivement la taille de la représentation de l’entrée ainsi que le nombre de paramètres et de calculs afférents. 
+Cela s’effectue par la définition d’une fenêtre de traitement, puis la sélection de certaines unités pour chacune des zones de l’entrée. 
+Le résultat consiste en un sous-échantillonnage de l’entrée qui, dans la pratique, s’appuiera sur des fonctions max ou moyenne sur les valeurs de la fenêtre. 
+
 \subsection{Autres}
 deep learning : connu depuis 1980 mais répandu depuis 2012
 perceptron
 capacité de généralisation : faculté d'un système à produire des résultats corrects sur des entrées inconnues, après un phase d'entraînement
 rétropopagation : depuis les années 80
 gardient : incrément ou décrément calculable de l'erreur correspondant à la modification des poids $\theta$ lors de la phase d'entraînement
+Les réseaux de neurones convolutifs, aussi appelés CNN ou ConvNets, ont été inventés par Yann LeCun, directeur du laboratoire d'intelligence artificielle FAIR pour
+l'entreprise Facebook depuis 2013 et titulaire de la chaire Informatique et Sciences Numériques au Collège de France. 
+Les réseaux de neurones convolutifs reposent sur un mécanisme de poids partagés, detinés à minimiser le nombre de paramètres mis en jeu et, ainsi, d'améliorer les
+résultats issus de la phase de généralisation. 
 
 % ajoute le lexique
 \setglossarystyle{altlist}
