--- a/rapport/DeepLearning.tex
+++ b/rapport/DeepLearning.tex
@@ -269,11 +269,11 @@ Les difficultés à calculer cette dérivée à n'importe quel niveau du réseau
 
 \subsection{Approche architecturale}
 
-L’approche adoptée par les CNNs consiste en premier lieu à adapter la structure du réseau aux entrées reçues, à savoir des images.
+L’approche adoptée par les \gls{CNN}s consiste en premier lieu à adapter la structure du réseau aux entrées reçues, à savoir des images.
 Les neurones sont organisés en 3 dimensions : hauteur, largeur et profondeur\footnote{Il faut bien faire la distinction entre la profondeur d’une couche, dont il est ici question, et celle du réseau en lui-même, qui signifie son nombre de couches}.
 Aussi, dans un tel réseau, les neurones seront seulement connectés à un nombre limité de neurones de la couche précédente.
 En définitive pour  $n$ classes, la sortie sera caractérisée par un vecteur résultant de dimensions $ 1 \times 1 \times n$.
-Une architecture de CNN répandue est composée des couches suivantes. A titre d’exemple, nous avons choisi d’illustrer les dimensions des couches pour un système utilisant les entrées de la base \gls{CIFAR 10} RGB :
+Une architecture de \gls{CNN} répandue est composée des couches suivantes. A titre d’exemple, nous avons choisi d’illustrer les dimensions des couches pour un système utilisant les entrées de la base \gls{CIFAR 10} RGB :
 
 \begin{itemize}
   \item \textbf{INPUT} : un volume 3D de [$32 \times 32 \times 3$]
@@ -287,7 +287,7 @@ Notons que l’entraînement d’un tel réseau, par descente de gradient, conce
 \begin{figure}[H]
     \centering
     \makebox[\textwidth]{\includegraphics[width=.5\paperwidth]{c1p3s1}}
-    \caption{Evolution des données au sein d'un CNN simple}
+    \caption{Evolution des données au sein d'un \gls{CNN} simple}
     \label{fig:c1p3s1}
 \end{figure}
 
@@ -348,7 +348,7 @@ perceptron
 capacité de généralisation : faculté d'un système à produire des résultats corrects sur des entrées inconnues, après un phase d'entraînement
 rétropopagation : depuis les années 80
 gardient : incrément ou décrément calculable de l'erreur correspondant à la modification des poids $\theta$ lors de la phase d'entraînement
-Les réseaux de neurones convolutifs, aussi appelés CNN ou ConvNets, ont été inventés par Yann LeCun, directeur du laboratoire d'intelligence artificielle FAIR pour
+Les réseaux de neurones convolutifs, aussi appelés \gls{CNN} ou ConvNets, ont été inventés par Yann LeCun, directeur du laboratoire d'intelligence artificielle FAIR pour
 l'entreprise Facebook depuis 2013 et titulaire de la chaire Informatique et Sciences Numériques au Collège de France.
 Les réseaux de neurones convolutifs reposent sur un mécanisme de poids partagés, detinés à minimiser le nombre de paramètres mis en jeu et, ainsi, d'améliorer les
 résultats issus de la phase de généralisation.
