proof of concept

--- a/rapport/DeepLearning.tex
+++ b/rapport/DeepLearning.tex
@@ -51,25 +51,20 @@
 	l'image selon leur orientation, chaque orientation constituant une dimension du vecteur. Ces représentations
 	permettent d'effectuer des traitements statistiques, comme des régressions linéaires}
 }
-
 \newglossaryentry{CNN}
 {
   name={CNN},
-	description={Lorem ipsum dolor sit amet}
+	description={Convolutional Neural Network}
 }
 \newglossaryentry{MLNN}
 {
   name={MLNN},
-	description={En reconnaissance de formes, un vecteur de caractéristiques est une représentation numérique de
-	propriétés visuelles d'un objet. Il peut par exemple être constitué de la quantité de lignes présentes dans
-	l'image selon leur orientation, chaque orientation constituant une dimension du vecteur. Ces représentations
-	permettent d'effectuer des traitements statistiques, comme des régressions linéaires}
+	description={Multi-Layer Neural Network}
 }
-
 \newglossaryentry{CIFAR 10}
 {
 	name={CIFAR 10},
-	description={Créée par Alex Krizhevsky, Vinod Nair, et Geoffrey Hinton, CIFAR 10 est une base de données adaptée aux problèmes de vision par ordinateur. Elle contient 60 000 images étiquetées selon 10 classes (6000 images par classe) typiquement de dimensions 32x32. Learning Multiple Layers of Features from Tiny Images, Alex Krizhevsky, 2009 }
+	description={Créée par Alex Krizhevsky, Vinod Nair, et Geoffrey Hinton, CIFAR 10 est une base de données adaptée aux problèmes de vision par ordinateur. Elle contient 60 000 images étiquetées selon 10 classes (6000 images par classe) typiquement de dimensions 32x32. Learning Multiple Layers of Features from Tiny Images, Alex Krizhevsky, 2009}
 }
 
 
