rapport chap2 - Faster R-CNN

--- a/rapport/Bibliography.tex
+++ b/rapport/Bibliography.tex
@@ -1,5 +1,6 @@
 \begin{thebibliography}{9}
 
+%%%%% Chapter 1 (Apprentissage profond)
   \bibitem{Bib_Marr}
   Bernard Marr,
   \emph{A short history of machine learning},
@@ -56,11 +57,33 @@
 
   \bibitem{Bib_ZeFer}
   Matthew D Zeiler, Rob Fergus,
-  28 Nov 2013,
+  28 nov 2013,
   Cornell University Library, Ithaca, NY, USA -
   Computer vision and pattern recognition,
   11p
   \emph{Visualizing and Understanding Convolutional Networks, v3},
   \url{https://arxiv.org/abs/1311.2901}.
 
+%%%%% Chapter 2 (Caffe)
+  \bibitem{Bib_CaffeHome}
+  Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor,
+  2014,
+  Berkley Vision,
+  \emph{Caffe : Convolutional Architecture for Fast Feature Embedding},
+  \url{http://caffe.berkeleyvision.org/}.
+
+  \bibitem{Bib_CaffeTuto}
+  Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor,
+  2014,
+  Berkley Vision,
+  \emph{Caffe : Convolutional Architecture for Fast Feature Embedding},
+  \url{caffe.berkeleyvision.org/tutorial/http://caffe.berkeleyvision.org/tutorial/}.
+
+  \bibitem{Bib_FasterRCNN}
+  Shaoqing Ren, Kaiming He, Ross Girshick, Jian Sun
+  4 jun 2015,
+  Cornell University Library,
+  \emph{Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks},
+  \url{https://arxiv.org/abs/1506.01497}.
+  
 \end{thebibliography}
