--- a/rapport/DeepLearning.tex
+++ b/rapport/DeepLearning.tex
@@ -53,7 +53,7 @@
   \input{TitlePage}
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-  % 	           Table of Contents                %
+  % 	           Table of Contents                  %
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
   \tableofcontents
@@ -64,7 +64,7 @@
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
   \input{Chapter1} % Apprentissage profond
-  \input{Chapter2} % R-CNN
+  \input{Chapter2} % Caffe
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % 	                Glossary                      %
